ca marche mais pas la couleur du persso quand il prend des degas de Brulure